fix: correct comma spacing of headings in css

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,12 @@ body {
     font-weight: 300;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-weight: 400;
 }
 
